--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "formidable": "^1.0.17",
-    "mongodb": "2.1.7"
+    "mongodb": "2.1.7",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "password-hash-and-salt": "^0.1.3"
   },
   "devDependencies": {}
 }
